1.4.7
 * #239: Upgrade your borgmatic configuration to get new options and comments via
   "generate-borgmatic-config --source". See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/upgrade/#upgrading-your-configuration

1.4.6
 * Verbosity level "-1" for even quieter output: Errors only (#236).

1.4.5
 * Log to file instead of syslog via command-line "--log-file" flag (#233).

1.4.4
 * #234: Support for Borg --keep-exclude-tags and --exclude-nodump options.

1.4.3
 * Monitor backups with Cronitor hook integration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#cronitor-hook

1.4.2
 * Extract files to a particular directory via "borgmatic extract --destination" flag.
 * Rename "borgmatic extract --restore-path" flag to "--path" to reduce confusion with the separate
   "borgmatic restore" action. Any uses of "--restore-path" will continue working.

1.4.1
 * #229: Restore backed up PostgreSQL databases via "borgmatic restore" action. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/
 * Documentation on how to develop borgmatic's documentation:
   https://torsion.org/borgmatic/docs/how-to/develop-on-borgmatic/#documentation-development

1.4.0
 * #225: Database dump hooks for PostgreSQL, so you can easily dump your databases before backups
   run.
 * #230: Rename "borgmatic list --pattern-from" flag to "--patterns-from" to match Borg.

1.3.26
 * #224: Fix "borgmatic list --successful" with a slightly better heuristic for listing successful
   (non-checkpoint) archives.

1.3.25
 * #223: Dead man's switch to detect when backups start failing silently, implemented via
   healthchecks.io hook integration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#healthchecks-hook
 * Documentation on monitoring and alerting options for borgmatic backups: